# napoleon_rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  eval_set.json  pyproject.toml
scripts/: eval.py
src/: logging_config.py  main.py
src/environ/: base.py  settings.py
src/environ/config/: embedding.py  llm.py  server.py  telegram.py  vector_store.py
src/rag/: container.py  embedding.py  ingest.py  query.py  registry.py  retriever.py  utils.py  vector_store.py
src/rag/loaders/: base.py  loaders.py
src/tg_bot/: app.py  runtime.py  states.py
src/tg_bot/handlers/: __init__.py  cancel.py  ingest.py  query.py  start.py
