[project]
name = "napoleon-rag"
version = "0.1.0"
description = "помощник поиска информации по документам"
authors = [
    {name = "Irek"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "unstructured[pdf,xlsx] (>=0.18.27,<0.19.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "pdfplumber (>=0.11.0,<1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "pre-commit (>=4.0.0,<5.0.0)",
    "pytest (>=8.3.0,<9.0.0)",
    "pytest-asyncio (>=0.24.0,<1.0.0)"
]

# ==== НАСТРОЙКИ RUFF ====
[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".env",
    "migrations",
    "alembic",
]

[tool.ruff.lint]
# ошибки (E, F), сортировка импортов (I),
# современный синтаксис (UP), возможные баги (B)
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
# Можно добавить и другие правила
ignore = []  # правила, которые нужно игнорировать

[tool.ruff.format]
quote-style = "double"        # использовать двойные кавычки
indent-style = "tab"
docstring-code-format = true  # форматировать строки документации


# lint = "poetry run ruff check ."        # просто проверка кода
# fix = "poetry run ruff check --fix ."       # исправление импорты кавычки и пробелы(удаляет лишнее заменяет устаревшее)
# fmt = "poetry run ruff format ."        # испраляет формат кода, приводит к единому стилю

# ручной pre-commit = "poetry run pre-commit run --all-files"
